# adventofcode2020

./: Cargo.toml  README.md
input/2020/: test.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
