[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Om Kelkar <12421344+okel17@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.2.1"
